Add jdk 11 support (#2358)