@@ -354,6 +354,20 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>3.2.2</version>
+				</plugin>
+				<plugin>
 					<groupId>org.projectlombok</groupId>
 					<artifactId>lombok-maven-plugin</artifactId>
 					<version>1.18.16.0</version>
@@ -604,6 +618,7 @@
 				<property>
 					<name>!no-default-modules</name>
 				</property>
+				<jdk>!11</jdk>
 			</activation>
 			<modules>
 				<module>core</module>
@@ -818,6 +833,52 @@
 					</plugin>
 				</plugins>
 			</reporting>
+		</profile>
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<no-default-modules/>
+			</properties>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<modules>
+				<module>core</module>
+				<module>webapp</module>
+				<module>ear</module>
+				<module>larva</module>
+				<module>ladybug</module>
+				<module>test</module>
+				<module>akamai</module>
+				<module>example</module>
+				<module>credentialProvider</module>
+			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<release>11</release>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.2</version>
+						<configuration>
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
+							<reuseForks>true</reuseForks>
+							<includes>
+								<include>**/*.java</include>
+							</includes>
+							<excludes>
+								<exclude>it.**</exclude>
+							</excludes>
+							<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
